src/test/ui/parser/issue-41155.rs
// compile-flags: -Z parse-only

impl S {
    pub
} //~ ERROR expected one of

fn main() {}
